--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="place__url-heading">URL</p>
                 <p class="place__url">park-kosa.ru</p>
                 <p class="place__paragraph_small">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                <p class="place__paragraph_big">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                <p class="place__paragraph_bigger">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
               </div>
           </div>
 
@@ -75,13 +75,13 @@
                 <p class="place__url-heading">URL</p>
                 <p class="place__url">National Geographic</p>
                 <p class="place__paragraph_small">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                <p class="place__paragraph_big">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                <p class="place__paragraph_large">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
               </div>
           </div>
 
           <div class="place">
             <div class="place__main"> 
-              <h2 class="place__title_margin">Алтай</h2>
+              <h2 class="place__title_margins">Алтай</h2>
               <img class="place__image" src="images/__image (2).png" alt="природа"> 
             </div>
   
@@ -89,7 +89,7 @@
                 <p class="place__url-heading">URL</p>
                 <p class="place__url">Facebook</p>
                 <p class="place__paragraph_small">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                <p class="place__paragraph_big">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                <p class="place__paragraph_smaller">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
               </div>
           </div>
 
@@ -134,7 +134,7 @@
                 </a>
 
                 <a href="https://vimeo.com/81106671" class="video__link" target="_blank">
-                  <img src="./images/Обсерватория.png" class="video__illustration" alt="Камчатка">
+                  <img src="./images/observation.png" class="video__illustration" alt="Камчатка">
                   <img class="video__icon_play" src="./images/__icon_play.svg" alt="иконка проигрыватель">
                   <p class="video__duration">24:45</p>
                   <h2 class="video__title">Обсерватория | Observatory</h2>
@@ -171,7 +171,7 @@
 
 
         <section class="cover width_changes">
-          <img class="cover__image" src="./images/use baikal.png" alt="Байкал"> 
+          <img class="cover__image" src="./images/Image (10).png" alt="Байкал"> 
           <h2 class="cover__title"> До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
         </section>
