--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
               <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <p class="place__url">park-kosa.ru</p>
+                <a href="http://park-kosa.ru/" class="place__url" target="_blank">park-kosa.ru</a>
                 <p class="place__paragraph_margins">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                 <p class="place__paragraph_bigger">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
               </div>
@@ -73,13 +73,13 @@
   
               <div class="place__website_margins">
                 <p class="place__url-heading">URL</p>
-                <p class="place__url">National Geographic</p>
+                <a href="https://www.nationalgeographic.com/" class="place__url" target="_blank">National Geographic</a>
                 <p class="place__paragraph_small">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                 <p class="place__paragraph_large">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
               </div>
           </div>
 
-          <div class="place">
+          <div class="place place_change_margin">
             <div class="place__main"> 
               <h2 class="place__title_margins">Алтай</h2>
               <img class="place__image" src="images/__image (2).png" alt="природа"> 
@@ -87,13 +87,13 @@
   
               <div class="place__website_margins">
                 <p class="place__url-heading">URL</p>
-                <p class="place__url">Facebook</p>
+                <a href="https://www.facebook.com/" class="place__url" target="_blank">Facebook</a>
                 <p class="place__paragraph_small">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
                 <p class="place__paragraph_smaller">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
               </div>
           </div>
 
-          <div class="place">
+          <div class="place_changes_margin">
             <div class="place__main"> 
               <h2 class="place__title_margins ">Зимний Байкал</h2>
               <img class="place__image" src="images/__image (3).png" alt="природа"> 
@@ -101,7 +101,7 @@
   
               <div class="place__website_margin">
                 <p class="place__url-heading">URL</p>
-                <p class="place__url">https://vk.com/baikalmile</p>
+                <a href="https://vk.com/baikalmile" class="place__url" target="_blank">https://vk.com/baikalmile</a>
                 <p class="place__paragraph_small">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                 <p class="place__paragraph_big">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
               </div>
@@ -115,7 +115,7 @@
   
               <div class="place__website_margins">
                 <p class="place__url-heading">URL</p>
-                <p class="place__url">http://vodlozero.ru/</p>
+                <a href="http://vodlozero.ru/" class="place__url" target="_blank">http://vodlozero.ru/</a>
                 <p class="place__paragraph_small">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
               </div>
           </div>
@@ -171,9 +171,11 @@
 
 
         <section class="cover width_changes">
-          <img class="cover__image" src="./images/Image (10).png" alt="Байкал"> 
-          <h2 class="cover__title"> До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank"> 
+            <img class="cover__image" src="./images/Image (10).png" alt="Байкал"> 
+            <h2 class="cover__title"> До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+          </a>
         </section>
 
       </main> 
@@ -187,7 +189,7 @@
           <li class="footer__list"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
         </ul>
 
-        <div class="footer__copywright">&copy; 2020. Мухаббат</div>
+        <p class="footer__copywright">&copy; 2020. Мухаббат</p>
      </footer>
 
     </div>
